@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
+- Fixed LP #877364:  tolerate 'macintosh' encoding (ancient OS9-ism) when
+  converting HTML to text.
 
 
 
